# MoneyJar

./: .gitignore  Cargo.toml  MoneyJarDB.sqlite  README.md  db_tests.py  main.rs
bruno/Money Jar Bruno Tests/: Create User.bru  Hello.bru  Root.bru  bruno.json
bruno/Money Jar Bruno Tests/authentication/: Login.bru
bruno/Money Jar Bruno Tests/events/: Create Event.bru  Delete Event.bru  Get All Events.bru  Get Event.bru  Update Date.bru  Update Description.bru  Update Reoccuring.bru
bruno/Money Jar Bruno Tests/friends/: Create Friend.bru  Delete Friend.bru  Get Friends.bru
bruno/Money Jar Bruno Tests/users/: Create User.bru  Delete User.bru  Get Email.bru  Get Name.bru  Get Phone.bru  Login.bru  Update Email.bru  Update Name.bru  Update Phone.bru
docs/: whiteboard.excalidraw
frontend/: .cta.json  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: AuthenticationContext.tsx  main.tsx  routeTree.gen.ts  runtime.ts  util.ts
frontend/src/components/: PageContainer.tsx
money-jar-backend/: Cargo.toml  MoneyJarDB.sqlite
money-jar-backend/src/: main.rs  state.rs
money-jar-backend/src/routes/: authentication.rs  events.rs  friends.rs  items.rs  mod.rs  pay_batches.rs  transactions.rs  users.rs  who_in_what.rs
money-jar-core/: Cargo.toml  diesel.toml
money-jar-core/src/: buisness.rs  lib.rs  models.rs  schema.rs
tauri/: package.json
tauri/src/: main.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tests/: __init__.py  event_tests.py  friends_tests.py  main.py  user_tests.py  utils.py  volumefix.py
(+73 files in other folders)
