[package]
name = "money-jar-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
money-jar-core = { path = "../money-jar-core" }

axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
